# google-meet-generator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  meet_bot.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
src/meet_bot/: __init__.py  __main__.py  bot.py  clients.py  web.py
tests/: test_import.py
