[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-meet-bot"
version = "0.1.0"
description = "Instant Google Meet generator Telegram bot"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["telegram", "google-meet", "bot"]

[tool.poetry.dev-dependencies]
# Leave this present for future dev tooling